# pms_rust_os

./: Cargo.toml  README.md  cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
doc/: bootloader.md  roadmap.md  tests.md
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs  testing.rs  vga_text.rs
kernel/src/x86_64/: mod.rs  port.rs  uart_16550.rs
src/: gdt.rs  interrupt.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/memory/: mod.rs  physical.rs
src/memory/physical/: mod.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
