[package]
name = "pms-rust-os"
version = "0.1.0"
edition = "2021"
authors = ["Peter Mueller <peter@petermuellersoftware.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300 # (in seconds)
run-args = ["-serial", "stdio", "-m", "128M"] # TODO: "-accel", "hax"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.*", features = ["recursive_page_table"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
default = ["verbose"]
verbose = []
