[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[dependencies]
    bootloader = "0.9.8"
    volatile = "0.2.6"
    lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
    spin = "0.9.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 3 # 0x01 < 1 | 1